--- a/README
+++ b/README
@@ -14,6 +14,9 @@ it will overwrite the current file. Thumbnails are generated at
 upload using the PHP ImageMagick PECL library. HTML, phpBB, and 
 direct URL codes are given when images are uploaded.
 
+Created and maintained by Andrew Peng:
+http://andrewpeng.net/computing/php-scripting/image-uploader-script
+
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
